Сделал JS аккордеона меню

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <section class="section menu">
             <h2 class="title title--color--white menu__title">меню</h2>
             <ul class="accordeon-menu">
-                <li class="accordeon-menu__item-collapsible accordeon-menu__item-collapsible--active">
+                <li class="accordeon-menu__item-collapsible">
                     <button class="accordeon-menu__unfolder accordeon-menu__unfolder--bg--coconut" type="button">
                         <h3>Батончики с молоком</h3>
                     </button>
