--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </button>
                 <div class="slider__main">
                     <ul class="slider__list">
-                        <li class="slider__item">
+                        <li class="slider__item 1">
                             <div class="slider__product">
                                 <img src="./img/content/slider-product-seaweed.png" alt="Батончик Морские водоросли" class="slider__product-pic">
                                 <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
@@ -216,13 +216,86 @@
                                     </ul>  
                                 </button>
                                 <div class="slider__info">
-                                    <h3>батончик “морские 
+                                    <h3>Батончик “Морские 
                                         водоросли”</h3>
                                     <p>Гранола из морских водорослей с овсом, миндалем и тыквенными семечками. В состав также входят: сухое молоко, заменитель сахара и какао бобы.</p>
                                 </div>
                                 <div class="slider__row">
                                     <div class="slider__spec"><span>Калорийность</span><b>120 ккал</b></div>
                                     <div class="slider__spec"><span>Вес</span><b>98 грамм</b></div>
+                                </div>
+                                <div class="slider__row">
+                                    <span class="slider__price">140 &#x20bd</span><button class="btn">заказать</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slider__item 2">
+                            <div class="slider__product">
+                                <img src="./img/content/slider-product-grape.png" alt="Батончик Морские водоросли" class="slider__product-pic">
+                                <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
+                                    <svg class="slider__arrow-icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
+                                    </svg>
+                                </button>                    
+                                <button class="slider__arrow slider__arrow--pos--right slider__arrow--screen--mobile">
+                                    <svg class="slider__arrow-icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="slider__content">
+                                <button class="slider__composition-holder">
+                                    <svg class="slider__composition-icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#bar"></use>
+                                    </svg>
+                                    состав
+                                    <ul class="slider__composition-list">
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#grape"></use>
+                                            </svg>
+                                            <span class="slider__component-name">Виноград</span><span class="slider__component-weight">25г</span>
+                                        </li>
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#nut"></use>
+                                            </svg>
+                                            <span class="slider__component-name">Грецкий орех</span><span class="slider__component-weight">32г</span>
+                                        </li>
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#almond"></use>
+                                            </svg>
+                                            <span class="slider__component-name">Кунжутное семя</span><span class="slider__component-weight">20г</span>
+                                        </li>
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#powder "></use>
+                                            </svg>
+                                            <span class="slider__component-name">Сухое молоко</span><span class="slider__component-weight">10г</span>
+                                        </li>
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#honey"></use>
+                                            </svg>
+                                            <span class="slider__component-name">Зам. сахара</span><span class="slider__component-weight">4г</span>
+                                        </li>
+                                        <li class="slider__composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#beans"></use>
+                                            </svg>
+                                            <span class="slider__component-name">Какао бобы</span> <span class="slider__component-weight">4г</span>
+                                        </li>
+                                    </ul>  
+                                </button>
+                                <div class="slider__info">
+                                    <h3>Батончик “Гранола 
+                                        виноград”</h3>
+                                    <p>Гранола из винограда, грецкого ореха и кунжутных семечек. В состав также входят: сухое молоко, заменитель сахара и какао бобы.</p>
+                                </div>
+                                <div class="slider__row">
+                                    <div class="slider__spec"><span>Калорийность</span><b>110 ккал</b></div>
+                                    <div class="slider__spec"><span>Вес</span><b>95 грамм</b></div>
                                 </div>
                                 <div class="slider__row">
                                     <span class="slider__price">140 &#x20bd</span><button class="btn">заказать</button>
