Реализовал переключение отзывов на JS

--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
                     </li>
                 </ul>
                 <ul class="reviews__switcher">
-                    <li class="reviews__switcher-item">
-                        <button type="button" class="reviews__switch-btn reviews__switch-btn--selected"><img
+                    <li class="reviews__switcher-item reviews__switcher-item--selected">
+                        <button type="button" class="reviews__switch-btn"><img
                                 src="img/content/user-fem-brown.jpg" alt="миниатюра фотографии автора отзыва"
                                 class="reviews__small-pic"></button>
                     </li>
@@ -654,7 +654,6 @@
                 <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
             </li>
         </ul>
-        </li>
         <nav class="fullscreen-nav">
                 <div class="container">
                     <ul class="fullscreen-nav__list">
