--- a/index.html
+++ b/index.html
@@ -505,16 +505,16 @@
         <section class="section order">
             <div class="order__inner container">
                 <h2 class="title title--color--green">Закажите доставку</h2>
-                <form action="" class="form">
+                <form class="form">
                     <div class="form__col">
                         <div class="form__row">
                             <label class="form__label">
                                 <div class="form__label-title">Имя</div>
-                                <input type="text" class="form__input" name="name">
+                                <input type="text" class="form__input" name="name" required>
                             </label>
                             <label class="form__label">
                                 <div class="form__label-title">Телефон</div>
-                                <input type="tel" class="form__input" name="tel">
+                                <input type="tel" class="form__input" name="tel" required>
                             </label>
                         </div>
                         <div class="form__row">
@@ -545,7 +545,7 @@
                         <div class="form__row">
                             <label class="form__label">
                                 <div class="form__label-title">Комментарий</div>
-                                <textarea type="text" name="floor-num" class="form__input form__textarea"></textarea>
+                                <textarea type="text" name="comment" class="form__input form__textarea" required></textarea>
                             </label>
                         </div>
                         <div class="form__options">
@@ -574,7 +574,7 @@
                         </div>
                         <div class="form__row form__buttons">
                             <button class="btn form__submit" type="submit">заказать</button>
-                            <button class="form__reset" type="rese">Очистить</button>
+                            <button class="form__reset" type="reset">Очистить</button>
                         </div>
                     </div>
                 </form>
