сделал вёрстку модального окна в форме заказа

--- a/index.html
+++ b/index.html
@@ -579,6 +579,12 @@
                     </div>
                 </form>
             </div>
+            <div class="order__overlay">
+                <div class="order__modal">
+                    <div class="order__modal-message">Сообщение отправлено</div>
+                    <div class="modal-btn btn">Закрыть</div>
+                </div>
+            </div>
         </section>
         <section class="section contacts">
             <map name="map" class="map"></map>
