Реализовал работу модального окна

--- a/index.html
+++ b/index.html
@@ -579,12 +579,7 @@
                     </div>
                 </form>
             </div>
-            <div class="order__overlay">
-                <div class="order__modal">
-                    <div class="order__modal-message">Сообщение отправлено</div>
-                    <div class="modal-btn btn">Закрыть</div>
-                </div>
-            </div>
+            
         </section>
         <section class="section contacts">
             <map name="map" class="map"></map>
@@ -678,6 +673,12 @@
                     </button>
                 </div>
             </nav>
+        <div class="order__overlay">
+            <div class="order__modal">
+                <div class="order__modal-message"></div>
+                <button class="modal-btn btn">Закрыть</button>
+            </div>
+        </div>
     </div>    
         <script src="js/main.js"></script>
 
