Сделал необходимые правки

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         </section>
         <section class="section slider">
             <div class="slider__inner container">
-                <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--desktop">
+                <button class="slider__arrow slider__arrow--pos--left">
                     <svg class="slider__arrow-icon">
                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                     </svg>
                 </button>                    
-                <button class="slider__arrow slider__arrow--pos--right slider__arrow--screen--desktop">
+                <button class="slider__arrow slider__arrow--pos--right">
                     <svg class="slider__arrow-icon">
                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                     </svg>
@@ -153,7 +153,7 @@
                         <li class="slider__item 1">
                             <div class="slider__product">
                                 <img src="./img/content/slider-product-seaweed.png" alt="Батончик Морские водоросли" class="slider__product-pic">
-                                <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
+                                <!-- <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
                                     <svg class="slider__arrow-icon">
                                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                                     </svg>
@@ -162,7 +162,7 @@
                                     <svg class="slider__arrow-icon">
                                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                                     </svg>
-                                </button>
+                                </button> -->
                             </div>
                             <div class="slider__content">
                                 <button class="slider__composition-holder">
@@ -232,7 +232,7 @@
                         <li class="slider__item 2">
                             <div class="slider__product">
                                 <img src="./img/content/slider-product-grape.png" alt="Батончик Морские водоросли" class="slider__product-pic">
-                                <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
+                                <!-- <button class="slider__arrow slider__arrow--pos--left slider__arrow--screen--mobile">
                                     <svg class="slider__arrow-icon">
                                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                                     </svg>
@@ -241,7 +241,7 @@
                                     <svg class="slider__arrow-icon">
                                         <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
                                     </svg>
-                                </button>
+                                </button> -->
                             </div>
                             <div class="slider__content">
                                 <button class="slider__composition-holder">
@@ -525,19 +525,19 @@
                         <div class="form__row">
                             <label class="form__label">
                                 <div class="form__label-title">Дом</div>
-                                <input type="text" name="house-num" class="form__input">
+                                <input type="text" name="houseNum" class="form__input">
                             </label>
                             <label class="form__label">
                                 <div class="form__label-title">Корпус</div>
-                                <input type="text" name="housing-num" class="form__input">
+                                <input type="text" name="housingNum" class="form__input">
                             </label>
                             <label class="form__label">
                                 <div class="form__label-title">Квартира</div>
-                                <input type="text" name="apartment-num" class="form__input">
+                                <input type="text" name="apartmentNum" class="form__input">
                             </label>
                             <label class="form__label">
                                 <div class="form__label-title">Этаж</div>
-                                <input type="text" name="floor-num" class="form__input">
+                                <input type="text" name="floorNum" class="form__input">
                             </label>
                         </div>
                     </div>
