--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
                             <nav class="nav">
                                 <ul class="nav__list">
                                     <li class="nav__item">
-                                        <a href="#why" class="nav__link">О нас</a>
+                                        <a href="#" class="nav__link" data-scroll-to="1">О нас</a>
                                     </li>
                                     <li class="nav__item">
-                                        <a href="#slider" class="nav__link">Батончики</a>
+                                        <a href="#slider" class="nav__link" data-scroll-to="2">Батончики</a>
                                     </li>
                                     <li class="nav__item">
-                                        <a href="#team" class="nav__link">Команда</a>
+                                        <a href="#team" class="nav__link" data-scroll-to="3">Команда</a>
                                     </li>
                                     <li class="nav__item">
-                                        <a href="#menu" class="nav__link">Меню</a>
+                                        <a href="#menu" class="nav__link" data-scroll-to="4">Меню</a>
                                     </li>
                                     <li class="nav__item">
-                                        <a href="#reviews" class="nav__link">Отзывы</a>
+                                        <a href="#reviews" class="nav__link" data-scroll-to="5">Отзывы</a>
                                     </li>
                                     <li class="nav__item">
                                         <a href="#" class="nav__link">Как мы работаем</a>
                                     </li>
                                     <li class="nav__item">
-                                        <a href="#contacts" class="nav__link">Контакты</a>
+                                        <a href="#contacts" class="nav__link" data-scroll-to="7">Контакты</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -61,7 +61,7 @@
                             <div class="hero__info">
                                 <p>Наши батончики идеально подходят для тех, кто следит за своим здоровьем</p>
                             </div>
-                            <button class="btn btn--theme--white" type="button">заказать</button>
+                            <button class="btn btn--theme--white" type="button" data-scroll-to="6">заказать</button>
                         </div>
                         <div class="hero__product">
                             <img src="img/content/bars.png" alt="Батончики" class="hero__product-pic">
@@ -216,7 +216,7 @@
                                         <div class="slider__spec"><span>Вес</span><b>98 грамм</b></div>
                                     </div>
                                     <div class="slider__row">
-                                        <span class="slider__price">140 &#x20bd</span><button class="btn">заказать</button>
+                                        <span class="slider__price">140 &#x20bd</span><button class="btn" data-scroll-to="6">заказать</button>
                                     </div>
                                 </div>
                             </li>
@@ -279,7 +279,7 @@
                                         <div class="slider__spec"><span>Вес</span><b>95 грамм</b></div>
                                     </div>
                                     <div class="slider__row">
-                                        <span class="slider__price">140 &#x20bd</span><button class="btn">заказать</button>
+                                        <span class="slider__price">140 &#x20bd</span><button class="btn" data-scroll-to="6">заказать</button>
                                     </div>
                                 </div>
                             </li>
@@ -611,30 +611,30 @@
                 </footer>
             </section>
         </div>
-        <ul class="fixed-menu">
-            <li class="fixed-menu__item">
-                <a class="fixed-menu__dot fixed-menu__dot--active" href="#" aria-label="О нас"></a>
+        <ul class="fixed-menu fixed-menu--color--white">
+            <li class="fixed-menu__item fixed-menu__item--active">
+                <a class="fixed-menu__dot"  data-scroll-to="0" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="1" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="2" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="3" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="4" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="5" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="6" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="7" href="#" aria-label="О нас"></a>
             </li>
         </ul>
         <nav class="fullscreen-nav">
