Сделал gulp до минификации CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chocco</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
     <div class="wrapper" id="wrapper">
@@ -613,40 +613,40 @@
         </div>
         <ul class="fixed-menu fixed-menu--color--white">
             <li class="fixed-menu__item fixed-menu__item--active">
-                <a class="fixed-menu__dot"  data-scroll-to="0" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"  data-scroll-to="0" href="#" aria-label="Главная"></a>
             </li>
             <li class="fixed-menu__item">
                 <a class="fixed-menu__dot"data-scroll-to="1" href="#" aria-label="О нас"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="2" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="2" href="#" aria-label="Батончики"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="3" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="3" href="#" aria-label="Команда"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="4" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="4" href="#" aria-label="Меню"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="5" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="5" href="#" aria-label="Отзывы"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="6" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="6" href="#" aria-label="Заказать"></a>
             </li>
             <li class="fixed-menu__item">
-                <a class="fixed-menu__dot"data-scroll-to="7" href="#" aria-label="О нас"></a>
+                <a class="fixed-menu__dot"data-scroll-to="7" href="#" aria-label="Контакты"></a>
             </li>
         </ul>
         <nav class="fullscreen-nav">
                 <div class="container">
                     <ul class="fullscreen-nav__list">
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">О нас</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Батончики</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Команда</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Меню</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Отзывы</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Как мы работаем</a></li>
-                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link">Контакты</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="1">О нас</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="2">Батончики</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="3">Команда</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="4">Меню</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="5">Отзывы</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="">Как мы работаем</a></li>
+                        <li class="fullscreen-nav__item"><a href="#" class="fullscreen-nav__link" data-scroll-to="7">Контакты</a></li>
                     </ul>
                     <button class="fullscreen-nav__close-btn">
                         <svg class="fullscreen-nav__close-icon">
